[3/20] 1. navigation bar UI 완료 2. recyclerview에 사용할 UI 완료 3. mypage 서버 연결 / UI 1차 완료

--- a/app/src/main/res/drawable/shadow_background.xml
+++ b/app/src/main/res/drawable/shadow_background.xml
@@ -19,5 +19,6 @@
         <corners android:radius="40dp" /> <solid android:color="#50CCCCCC" /> </shape> </item>
 
     <!-- Background -->
-    <item> <shape> <solid android:color="#ffffff" /> <corners android:radius="40dp" /> </shape> </item>
+    <item> <shape>
+        <solid android:color="@color/white"/><corners android:radius="40dp" /></shape> </item>
 </layer-list>
