--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,6 +5,147 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".myprofile.editProfile.ChangePassword">
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/vector"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="18dp"
+        android:layout_marginStart="18dp"/>
+
+    <TextView
+        android:id="@+id/titleChangePassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Password"
+        android:textSize="22dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/backButton"
+        app:layout_constraintBottom_toBottomOf="@id/backButton"/>
+
+    <TextView
+        android:id="@+id/changePasswordTextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current Password"
+        android:textSize="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleChangePassword"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="50dp"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/currentPasswordLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/changePasswordTextview"
+        android:layout_marginStart="40dp"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleDrawable="@drawable/toggle_icon_status"
+        app:passwordToggleTint="@color/danzlePink"
+        app:errorEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/cuurentPassword"
+            android:layout_width="320dp"
+            android:layout_height="46dp"
+            android:inputType="textPassword"
+            android:background="@drawable/edittext_box"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="12dp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/newPasswordTextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Password"
+        android:textSize="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/currentPasswordLayout"
+        android:layout_marginStart="40dp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/newPasswordLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/newPasswordTextview"
+        android:layout_marginStart="40dp"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleDrawable="@drawable/toggle_icon_status"
+        app:passwordToggleTint="@color/danzlePink"
+        app:errorEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/newPassword"
+            android:layout_width="320dp"
+            android:layout_height="46dp"
+            android:inputType="textPassword"
+            android:background="@drawable/edittext_box"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="12dp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <TextView
+        android:id="@+id/confirmPasswordTextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirm Password"
+        android:textSize="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/newPasswordLayout"
+        android:layout_marginStart="40dp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/confirmPasswordLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextview"
+        android:layout_marginStart="40dp"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleDrawable="@drawable/toggle_icon_status"
+        app:passwordToggleTint="@color/danzlePink"
+        app:errorEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/confirmPassword"
+            android:layout_width="320dp"
+            android:layout_height="46dp"
+            android:inputType="textPassword"
+            android:background="@drawable/edittext_box"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="12dp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <Button
+        android:id="@+id/changePasswordButton"
+        android:layout_width="320dp"
+        android:layout_height="46dp"
+        android:background="@drawable/button_round_radius"
+        android:backgroundTint="@color/danzlePink"
+        android:gravity="center"
+        android:text="Change Password"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:fontFamily="@font/inter_18pt_semibold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
+        android:layout_marginTop="40dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
