--- a/app/src/main/res/layout/activity_change_username.xml
+++ b/app/src/main/res/layout/activity_change_username.xml
@@ -7,70 +7,55 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context=".startPage.ForgotPassword1">
+    tools:context=".myprofile.editProfile.ChangeUsername">
 
-    <TextView
-        android:id="@+id/titleTextview"
+    <Button
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgotten Password"
+        android:background="@drawable/vector"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="18dp"
+        android:layout_marginStart="18dp"/>
+
+    <TextView
+        android:id="@+id/titleUsermane"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Username"
         android:textSize="22dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/cancelButton"
-        app:layout_constraintBottom_toBottomOf="@id/cancelButton"/>
+        app:layout_constraintTop_toTopOf="@id/backButton"
+        app:layout_constraintBottom_toBottomOf="@id/backButton"/>
 
-    <Button
-        android:id="@+id/cancelButton"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:background="@drawable/cancel"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp"/>
-
-    <TextView
-        android:id="@+id/sentenceTextview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/grayText"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleTextview"
-        android:layout_marginTop="30dp"
-        android:text="Type in your account email and we'll send you \nan email with a new password."/>
 
     <EditText
-        android:id="@+id/emailEdittext"
+        android:id="@+id/changeUsernameEdittext"
         android:layout_width="320dp"
         android:layout_height="46dp"
-        android:inputType="text"
-        android:hint="  Writing an Email"
-        android:textSize="12dp"
-        android:textColorHint="@color/grayText"
-        android:textColorHighlight="@color/black"
         android:background="@drawable/edittext_box"
+        android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sentenceTextview"
-        android:layout_marginTop="15dp"/>
+        app:layout_constraintTop_toBottomOf="@id/titleUsermane"
+        android:layout_marginTop="50dp"/>
 
     <Button
-        android:id="@+id/sendEmailButton"
+        android:id="@+id/changeUsernameButton"
         android:layout_width="320dp"
         android:layout_height="46dp"
-        android:layout_marginTop="40dp"
         android:background="@drawable/button_round_radius"
         android:backgroundTint="@color/danzlePink"
         android:gravity="center"
-        android:text="Send Email"
+        android:text="Change Username"
         android:textColor="@color/white"
         android:textSize="16dp"
         android:fontFamily="@font/inter_18pt_semibold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailEdittext" />
+        app:layout_constraintTop_toBottomOf="@id/changeUsernameEdittext"
+        android:layout_marginTop="50dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
