--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -72,21 +72,31 @@
         android:layout_marginTop="30dp"/>
 
     <TextView
-        android:id="@+id/email"
+        android:id="@+id/originUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="email@email.com"
-        android:textSize="12dp"
+        android:text="username"
+        android:textSize="22dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profileImage"/>
+
+    <TextView
+        android:id="@+id/originEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="email@email.com"
+        android:textSize="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/originUsername"/>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/background"
-        app:layout_constraintTop_toBottomOf="@id/email"
+        app:layout_constraintTop_toBottomOf="@id/originEmail"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:backgroundTint="@color/white"
@@ -100,7 +110,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/background"
             android:layout_marginTop="40dp"
-            android:background="@drawable/myprofile_background">
+            android:background="@drawable/shadow_background_pink">
 
             <ImageView
                 android:id="@+id/usernameIcon"
@@ -117,7 +127,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Username"
-                android:textSize="15dp"
+                android:textSize="16dp"
                 android:fontFamily="@font/inter_18pt_medium"
                 app:layout_constraintStart_toEndOf="@id/usernameIcon"
                 app:layout_constraintTop_toTopOf="parent"
@@ -134,7 +144,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/username"
             android:layout_marginTop="18dp"
-            android:background="@drawable/myprofile_background">
+            android:background="@drawable/shadow_background_pink">
 
             <ImageView
                 android:id="@+id/passwordIcon"
@@ -151,7 +161,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Change Password"
-                android:textSize="15dp"
+                android:textSize="16dp"
                 android:fontFamily="@font/inter_18pt_medium"
                 app:layout_constraintStart_toEndOf="@id/passwordIcon"
                 app:layout_constraintTop_toTopOf="parent"
@@ -169,7 +179,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/changePassword"
             android:layout_marginTop="18dp"
-            android:background="@drawable/myprofile_background">
+            android:background="@drawable/shadow_background_pink">
 
             <ImageView
                 android:id="@+id/deleteIcon"
@@ -186,7 +196,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Delete Account"
-                android:textSize="15dp"
+                android:textSize="16dp"
                 android:fontFamily="@font/inter_18pt_medium"
                 app:layout_constraintStart_toEndOf="@id/deleteIcon"
                 app:layout_constraintTop_toTopOf="parent"
