--- a/app/src/main/res/layout/activity_full_finish.xml
+++ b/app/src/main/res/layout/activity_full_finish.xml
@@ -15,10 +15,10 @@
         android:textSize="22dp"
         android:textColor="@color/lightPink"
         android:fontFamily="@font/inter_18pt_bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/vector"
-        app:layout_constraintEnd_toStartOf="@+id/alarm"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toTopOf="@id/vector"
+        app:layout_constraintBottom_toBottomOf="@id/vector"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/vector"
@@ -26,8 +26,9 @@
         android:layout_height="wrap_content"
         android:background="@drawable/vector"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/highlight"
-        android:layout_marginStart="18dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"/>
 
     <Button
         android:id="@+id/alarm"
@@ -35,7 +36,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/alarm"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/highlight"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="18dp" />
 
     <ImageView
@@ -65,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Jennie"
-        android:textSize="14dp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/songName"
@@ -78,7 +80,7 @@
         android:layout_height="40dp"
         android:text="Try Again"
         android:textColor="@color/white"
-        android:textSize="16dp"
+        android:textSize="17dp"
         android:fontFamily="@font/inter_18pt_semibold"
         android:gravity="center"
         android:background="@drawable/button_round_radius"
@@ -94,7 +96,7 @@
         android:layout_height="40dp"
         android:text="Other Songs"
         android:textColor="@color/white"
-        android:textSize="16dp"
+        android:textSize="17dp"
         android:fontFamily="@font/inter_18pt_semibold"
         android:gravity="center"
         android:background="@drawable/button_round_radius"
@@ -110,7 +112,7 @@
         android:layout_height="40dp"
         android:text="Quit"
         android:textColor="@color/white"
-        android:textSize="16dp"
+        android:textSize="17dp"
         android:fontFamily="@font/inter_18pt_semibold"
         android:gravity="center"
         android:background="@drawable/button_round_radius"
