--- a/app/src/main/res/layout/logout_dialog.xml
+++ b/app/src/main/res/layout/logout_dialog.xml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/custom_radius_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="280dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/custom_radius_background"
-        android:backgroundTint="@color/white">
-
 
         <TextView
             android:id="@+id/text1"
@@ -44,30 +36,30 @@
             android:background="@drawable/button_round_radius"
             android:backgroundTint="@color/danzlePink"
             android:text="Cancel"
-            android:textSize="15dp"
+            android:textSize="16dp"
             android:textColor="@color/white"
             android:fontFamily="@font/inter_18pt_medium"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text2"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp" />
 
         <Button
             android:id="@+id/logoutButton"
             android:layout_width="304dp"
             android:layout_height="52dp"
-            android:background="@drawable/myprofile_background"
+            android:background="@drawable/shadow_background_pink"
             android:text="Logout"
-            android:textSize="15dp"
+            android:textSize="16dp"
             android:textColor="#F00303"
             android:fontFamily="@font/inter_18pt_medium"
             android:gravity="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cancelButton"
-            android:layout_marginTop="10dp"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
