[3/22] 1. navigationbar -> fragment 코드 원래 코드와 합침 2. MainPracticeFragment의 viewPager 백그라운드 색상 설정

--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8F8F8"
-    tools:context=".MyProfileFragment2">
+    tools:context=".MyProfileFragment">
 
     <Button
         android:id="@+id/backButton"
