--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="lightPink">#FF98D5</color>
     <color name="lightBlue">#64E9EB</color>
     <color name="blue">#2196F3</color>
-
+    <color name="practice_main_fragment_grayline">#D3D3D3</color>
 </resources>
