--- a/app/src/main/res/layout/fragment_main_practice.xml
+++ b/app/src/main/res/layout/fragment_main_practice.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PracticeMain">
+    tools:context=".MainPracticeFragment">
 
 
     <TextView
@@ -24,7 +24,7 @@
         android:id="@+id/line1"
         android:layout_width="350dp"
         android:layout_height="3dp"
-        android:background="@color/gray"
+        android:background="@color/practice_main_fragment_grayline"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/line2"
         android:layout_width="350dp"
         android:layout_height="3dp"
-        android:background="@color/gray"
+        android:background="@color/practice_main_fragment_grayline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewPager"
@@ -44,17 +44,13 @@
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:clipToPadding="false"
         android:clipChildren="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/line1"
         android:layout_marginTop="30dp"/>
-
-    
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
