--- a/app/src/main/res/layout/activity_highlight_practice.xml
+++ b/app/src/main/res/layout/activity_highlight_practice.xml
@@ -7,4 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".practice.HighlightPractice">
 
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/playerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
