--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -37,6 +37,7 @@
             android:id="@+id/emailLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/Widget.Danzle.TextInputLayout.OutlinedBox"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/idTextview"
             android:layout_marginStart="40dp">
@@ -44,9 +45,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email"
                     android:layout_width="320dp"
-                    android:layout_height="46dp"
-                    android:background="@drawable/edittext_box"
-                    android:inputType="text"/>
+                    android:layout_height="50dp"
+                    android:textSize="14dp"
+                    android:inputType="textEmailAddress" />
+                <!-- inputType: "textEmailAddress": 사용자 입력 환경 개선 -->
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,6 +67,7 @@
             android:id="@+id/passwordLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/Widget.Danzle.TextInputLayout.OutlinedBox"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/passwordTextview"
             android:layout_marginStart="40dp"
@@ -75,9 +78,9 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password"
                     android:layout_width="320dp"
-                    android:layout_height="46dp"
-                    android:inputType="textPassword"
-                    android:background="@drawable/edittext_box"/>
+                    android:layout_height="50dp"
+                    android:textSize="14dp"
+                    android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
