1. 실루엣 영상 불러오기 성공 => 실루엣 영상 불러올 때 영상 자체는 잘 넘어오는데 카메라 화면 때문에 실루엣 영상이 안 보이는 현상 발생 => xml에 있는 실루엣 영상 부분에 app:surface_type="texture_view" 이 부분 추가해주니까 문제 해결됨
- 실루엣 영상 서버 주소 부분이 지금 잘못되서 하드코딩한 상태

2. 음악 선택 recyclerview 부분 click 기능 구현 완료

--- a/app/src/main/res/layout/activity_highlight_finish.xml
+++ b/app/src/main/res/layout/activity_highlight_finish.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HighlightFinish">
+    tools:context=".practice.HighlightFinish">
 
     <TextView
         android:id="@+id/highlight"
@@ -15,13 +15,13 @@
         android:textSize="22dp"
         android:textColor="@color/lightPink"
         android:fontFamily="@font/inter_18pt_bold"
-        app:layout_constraintTop_toTopOf="@id/vector"
-        app:layout_constraintBottom_toBottomOf="@id/vector"
+        app:layout_constraintTop_toTopOf="@id/backButton"
+        app:layout_constraintBottom_toBottomOf="@id/backButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/vector"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/vector"
