--- a/app/src/main/res/layout/activity_practice_music_select.xml
+++ b/app/src/main/res/layout/activity_practice_music_select.xml
@@ -16,12 +16,12 @@
         android:textColor="@color/lightPink"
         android:fontFamily="@font/inter_18pt_bold"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/vector"
+        app:layout_constraintStart_toEndOf="@+id/backButton"
         app:layout_constraintEnd_toStartOf="@+id/alarm"
         android:layout_marginTop="10dp"/>
 
     <Button
-        android:id="@+id/vector"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/vector"
@@ -89,7 +89,6 @@
         app:layout_constraintTop_toBottomOf="@id/searchBar"
         android:layout_marginTop="30dp"/>
 
-
     <TextView
         android:id="@+id/textMusic"
         android:layout_width="wrap_content"
@@ -104,15 +103,15 @@
     <View
         android:id="@+id/line"
         android:layout_width="365dp"
-        android:layout_height="3dp"
+        android:layout_height="2dp"
         android:background="@color/gray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textMusic"
         android:layout_marginStart="17dp"
         android:layout_marginTop="8dp"/>
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/songListRecyclerViewLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/line"
@@ -125,10 +124,5 @@
             android:layout_height="match_parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
