--- a/app/src/main/res/layout/fragment_main_practice.xml
+++ b/app/src/main/res/layout/fragment_main_practice.xml
@@ -24,7 +24,7 @@
         android:id="@+id/line1"
         android:layout_width="350dp"
         android:layout_height="3dp"
-        android:background="@color/practice_main_fragment_grayline"
+        android:background="@color/grayText"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/line2"
         android:layout_width="350dp"
         android:layout_height="3dp"
-        android:background="@color/practice_main_fragment_grayline"
+        android:background="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewPager"
