--- a/app/src/main/res/layout/activity_correction_music_select.xml
+++ b/app/src/main/res/layout/activity_correction_music_select.xml
@@ -7,4 +7,124 @@
     android:layout_height="match_parent"
     tools:context=".correction.CorrectionMusicSelect">
 
+    <TextView
+        android:id="@+id/practice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="correction"
+        android:textSize="22dp"
+        android:textColor="@color/correctionWord"
+        android:fontFamily="@font/inter_18pt_bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/backButton"
+        app:layout_constraintEnd_toStartOf="@+id/alarm"
+        android:layout_marginTop="10dp"/>
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/vector"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/practice"
+        android:layout_marginTop="18dp"
+        android:layout_marginStart="18dp"/>
+
+    <Button
+        android:id="@+id/alarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/alarm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/searchBar"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:orientation="horizontal"
+        android:background="@drawable/search_background"
+        android:backgroundTint="#FFE2FC"
+        app:layout_constraintTop_toBottomOf="@id/practice"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="17dp">
+
+        <EditText
+            android:id="@+id/searchSong"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Find Playlist"
+            android:textColorHint="@color/grayText"
+            android:textSize="13dp"
+            android:background="@null"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/searchImage"
+            android:layout_marginStart="15dp" />
+
+        <ImageView
+            android:id="@+id/searchImage"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:background="@drawable/search_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/imageBanner"
+        android:layout_width="350dp"
+        android:layout_height="130dp"
+        android:src="@drawable/bannerimage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchBar"
+        android:layout_marginTop="30dp"/>
+
+    <TextView
+        android:id="@+id/textMusic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="music"
+        android:textSize="22dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageBanner"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="30dp"/>
+
+    <View
+        android:id="@+id/line"
+        android:layout_width="365dp"
+        android:layout_height="2dp"
+        android:background="@color/gray"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textMusic"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="8dp"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/songListRecyclerViewLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/line"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/songListRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
