--- a/app/src/main/res/layout/activity_highlight_practice.xml
+++ b/app/src/main/res/layout/activity_highlight_practice.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+ㅏ<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,13 +7,43 @@
     android:layout_height="match_parent"
     tools:context=".practice.HighlightPractice">
 
-    <androidx.media3.ui.PlayerView
-        android:id="@+id/playerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <FrameLayout
+        android:id="@+id/videoContainer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <!-- 전면 카메라 미리보기 -->
+        <androidx.camera.view.PreviewView
+            android:id="@+id/previewView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <!-- 서버에서 받아온 실루엣 영상 -->
+        <androidx.media3.ui.PlayerView
+            android:id="@+id/playerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:surface_type="texture_view"
+            android:visibility="visible"
+            android:background="@android:color/transparent"/>
+
+
+
+
+        <Button
+            android:id="@+id/video_capture_button"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginBottom="50dp"
+            android:layout_marginStart="50dp"
+            android:elevation="2dp"
+            android:text = "starvideo"
+            android:textColor="@color/white" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
