--- a/app/src/main/res/layout/activity_practice_video_repository.xml
+++ b/app/src/main/res/layout/activity_practice_video_repository.xml
@@ -8,7 +8,7 @@
     tools:context=".myprofile.myVideo.PracticeVideoRepository">
 
     <Button
-        android:id="@+id/vector"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/vector"
