1. 연습하기 모드 서버 연결 but, 배경 검정 레이아웃 문제
2. 정확도 모드 1차 완료 -> 서버 500 error

--- a/app/src/main/res/layout/activity_highlight_practice_finish.xml
+++ b/app/src/main/res/layout/activity_highlight_practice_finish.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".practice.HighlightFinish">
+    tools:context=".practice.HighlightPracticeFinish">
 
     <TextView
         android:id="@+id/highlight"
@@ -41,7 +41,7 @@
         android:layout_marginEnd="18dp" />
     
     <ImageView
-        android:id="@+id/albumImage"
+        android:id="@+id/songImage"
         android:layout_width="260dp"
         android:layout_height="340dp"
         app:layout_constraintStart_toStartOf="parent"
