MusicSelect -> 리사이클러뷰 클릭 오류 해결, xml 업데이트

--- a/app/src/main/res/layout/activity_highlight_practice_finish.xml
+++ b/app/src/main/res/layout/activity_highlight_practice_finish.xml
@@ -59,7 +59,7 @@
         android:fontFamily="@font/inter_18pt_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/albumImage"
+        app:layout_constraintTop_toBottomOf="@id/songImage"
         android:layout_marginTop="40dp"/>
 
     <TextView
