--- a/app/src/main/res/layout/activity_music_select_popup.xml
+++ b/app/src/main/res/layout/activity_music_select_popup.xml
@@ -35,17 +35,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mantra"
+        android:fontFamily="@font/inter_18pt_semibold"
         android:textSize="26dp"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/songImage"/>
+        app:layout_constraintTop_toBottomOf="@id/songImage"
+        android:layout_marginTop="10dp"/>
     
     <TextView
         android:id="@+id/artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Jennie"
+        android:fontFamily="@font/inter_18pt_bold"
         android:textSize="18dp"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +61,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="01:06"
-        android:textSize="13dp"
+        android:fontFamily="@font/inter_18pt_bold"
+        android:textSize="18dp"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,10 +75,11 @@
         android:layout_height="31dp"
         android:text="FULL"
         android:gravity="center"
+        android:fontFamily="@font/inter_18pt_semibold"
         android:textSize="18dp"
         android:textColor="@color/white"
         android:background="@drawable/square_radius"
-        android:backgroundTint="#B3000000"
+        android:backgroundTint="#8C000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/highlight"
         app:layout_constraintTop_toBottomOf="@id/songTime"
@@ -88,8 +93,9 @@
         android:gravity="center"
         android:textSize="18dp"
         android:textColor="@color/white"
+        android:fontFamily="@font/inter_18pt_semibold"
         android:background="@drawable/square_radius"
-        android:backgroundTint="#B3000000"
+        android:backgroundTint="#8C000000"
         app:layout_constraintStart_toEndOf="@id/full"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/songTime"
