1. responseCorrection 수정 2. Correction -> 서버 피드백 반영 후, 텍스트에 따라 색상 변경해주기

--- a/app/src/main/res/layout/fragment_main_practice.xml
+++ b/app/src/main/res/layout/fragment_main_practice.xml
@@ -35,7 +35,7 @@
         android:id="@+id/line2"
         android:layout_width="350dp"
         android:layout_height="3dp"
-        android:background="@color/black"
+        android:background="@color/grayText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewPager"
