--- a/app/src/main/res/drawable/correction_background_color.xml
+++ b/app/src/main/res/drawable/correction_background_color.xml
@@ -3,7 +3,7 @@
 
     <gradient
         android:startColor="#8000FFFF"
-        android:endColor="#88DDFF55"
+        android:endColor="#C2F836"
         android:angle="270"
         android:type="linear"/>
 
